# linux-sysdiag-mcp

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  server.py
core/: config.py  ssh_client.py
parsers/: ipmi.py  journal.py  last.py  sar.py
tests/: README.md  test_abc.py  test_find_incidents.py  test_ipmi.py  test_journalctl.py  test_last.py  test_sar.py  test_ssh.py  test_tools.py
tools/: find_incidents.py  get_context.py  run_command.py
